# symicon

./: CMakeLists.txt  DartSymi.cpp  PaintIcon.cpp  PaintIcon.h  QuiltIcon.cpp  QuiltIcon.h  SymIconApp.cpp  SymIconApp.h  main.cpp  symi_interface.cpp
